	Edited file /modules/User Admin/user_manage_edit.php
	
Planner: added import for outcomes
	New values in tables gibbonAction, gibbonPermission
	New file /modules/Planner/outcomes_import.php

Planner: added ability to star/fav smart blocks for reuse
	New table gibbonUnitBlockStar
	Edited file /modules/Planner/moduleFunctions.php
	New file /modules/Planner/units_edit_starAjax.php
	
v9.0.00
-------
i18n: fixed name details of Spanish translator
	Edited value in table gibboni18n

Students: added title field to Student Notes
	Edited table gibbonStudentNote
	Edited files /modules/Students/student_view_details*.php

Students: added category filter to Student Notes
	Edited files /modules/Students/student_view_details*.php

User Admin: adjusted Actions column width in Manage Roles to fit icons
	Edited file /modules/User Admin/role_manage.php

i18n: added French as non-active language for development
	Added value to table gibboni18n
	Added folder /i18n/fr_FR

External Assessments: added ability to allow file upload of student results
	Edited tables gibbonExternalAssessment, gibbonExternalAssessmentStudent
	Edited files /modules/School Admin/externalAssessments_manage*.php
	Edited files /modules/External Assessment/moduleFunctions.php, externalAssessment_details*.php

CLI: added new cronable script to check who has not taken attendance, and email them a reminder
	New file /cli/attendance_dailyIncompleteEmail.php

Outcomes: fixed outcome edit view for users with department-only editing rights
	Edited file /modules/Planner/outcomes_edit.php

User Admin: added Roll Order field to Roll Group admin
	Edited table gibbonStudentEnrolment
	Edited files /modules/User Admin/studentEnrolment_manage*.php

General: replaced $URL=$URL . with $URL.=
	Edited many files across the system
	
Behaviour: added ability to add multiple records in one go
	Edited file /modules/Behaviour/behaviour_manage.php 
	Added files /modules/Behaviour/behaviour_manage_addMulti*.php
